Improve event display on small screens. Fixes #34

--- a/frontend/src/css/_agenda.scss
+++ b/frontend/src/css/_agenda.scss
@@ -72,7 +72,9 @@
     padding-right: 30px;
     width: 450px;
     @include screen(small) {
-        width: 300px;
+        width: 100%;
+        padding: 0;
+        flex-direction: column;
     }
 }
 
@@ -82,6 +84,10 @@
     margin-left: 20px;
     color: $font-color;
     margin-bottom: 20px;
+
+    @include screen(small) {
+        width: 100%;
+    }
 
     p {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
